# chess2vec

./: .gitignore  Cargo.toml  README.md
examples/: test.rs
src/: lib.rs
src/core/: mod.rs  move_info.rs
src/wasm_bindgen/: mod.rs
