[package]
name = "chess2vec"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "Generating features from chess positions"
repository = "https://github.com/Philipp-Sc/chess2vec"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [ "console" ], optional = true }
env_logger = "0.9.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chess = "3.2.0"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.21.1", features = ["full"] }

[features]
default = []
wasm = ["wasm-bindgen","web-sys"]


[lib]
name = "chess2vec"
path = "src/lib.rs"

crate-type = ["cdylib", "rlib"]


[[example]]
name = "test"
